Project

General

Profile

Fix #46696

mds: pre-fragment distributed ephemeral pin directories to distribute the subtree bounds

Added by Patrick Donnelly over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
multimds
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

As a workaround for #46648, pre-micro-fragment a directory that is distributed so that a single MDS does not track all of the bounds. Each small fragment can be ephemerally pinned too so the fragments are evenly spread across the MDS cluster.

Credit Zheng for the idea.


Related issues

Related to CephFS - Bug #46648: mds: cannot handle hundreds+ of subtrees In Progress

History

#1 Updated by Patrick Donnelly over 3 years ago

  • Related to Bug #46648: mds: cannot handle hundreds+ of subtrees added

#2 Updated by Patrick Donnelly over 3 years ago

  • Status changed from New to Resolved
  • Assignee changed from Patrick Donnelly to Zheng Yan
  • Pull request ID set to 36537

Also available in: Atom PDF